Fixed issues with map plots becoming too large

--- a/static/apps/antarctic_landice_SEC/main.css
+++ b/static/apps/antarctic_landice_SEC/main.css
@@ -60,8 +60,10 @@ body {
 
 /* CSS FOR DISPLAY IMAGE */
 #displayImage {
-    width: 100%; 
-    max-height:100%;
+    max-width: 100%; 
+    width: auto;
+    max-height:700px;
+    object-fit: contain;
     display: block;
     margin-left: auto;
     margin-right: auto;
